# CREA-sesame-lib

./: .gitignore  pyproject.toml
crea_sesame_lib/: __init__.py  caras.py  connection.py  emotes.py  motion.py  movimiento.py
tests/: __init__.py
